examples/pass/complex/lazy_closure.dew
// expect: 82
// Lazy computation used as input to a function.
def base = 40;
def add_two = fn(x: Int) -> Int { x + 2 };
def main = fn { add_two(base) + base -> stdout; };
