examples/fail/effect/pure_fn_calls_io.dew
// expect error: [E006]
// Pure function annotation violated: body calls stdout.
def bad_add = fn(x: Int, y: Int) -> Int { x + y -> stdout; };
def main = fn { bad_add(40, 2) -> stdout; };
